<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
<item android:title="@string/addfriend" android:id="@+id/addfriend" android:visible="true" android:enabled="true" android:icon="@drawable/ic_menu_add"></item>
<item android:title="@string/removefriends" android:id="@+id/removefriends" android:visible="true" android:enabled="true" android:icon="@drawable/ic_menu_delete"></item>
<item android:id="@+id/refresh" android:icon="@drawable/ic_menu_refresh" android:title="@string/refresh" android:visible="true" android:enabled="true"></item>
<item android:id="@+id/settings" android:icon="@drawable/ic_menu_preferences" android:title="@string/settings" android:visible="true" android:enabled="true"></item>
<item android:id="@+id/help" android:icon="@drawable/ic_menu_help" android:title="@string/help" android:visible="true" android:enabled="true"></item>

</menu>
