<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:id="@+id/refresh" android:icon="@drawable/ic_menu_refresh" android:title="@string/update" android:visible="true" android:enabled="true"></item>
   <item android:id="@+id/refetch" android:icon="@drawable/ic_menu_revert" android:title="@string/refreshold" android:visible="true" android:enabled="true"></item>
   <item android:id="@+id/setfilter" android:icon="@drawable/ic_menu_allfriends" android:title="@string/setfilter" android:visible="true" android:enabled="true"></item>

<item android:id="@+id/settings" android:icon="@drawable/ic_menu_preferences" android:title="@string/settings" android:visible="true" android:enabled="true"></item>
<item android:id="@+id/help" android:icon="@drawable/ic_menu_help" android:title="@string/help" android:visible="true" android:enabled="true"></item>

</menu>
